# baxter_moveit_stomp_trac_ik_config

./: .setup_assistant  CMakeLists.txt  README.md  package.xml
config/: baxter.srdf  kinematics.yaml  stomp_planning.yaml
launch/: baxter_moveit_stomp_trac_ik_config.launch  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  for_real_robot.rviz  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  stomp_planning_pipeline.launch.xml  trajectory_execution.launch.xml  warehouse.launch
scripts/: baxter_moveit_stomp_trac_ik_keyboard_control.py
src/: baxter_moveit_stomp_trac_ik.cpp  baxter_moveit_stomp_trac_ik.cpp.autosave  baxter_moveit_stomp_trac_ik_controller.cpp  baxter_moveit_stomp_trac_ik_tutorial.cpp
